--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "numba>=0.61.2",
     "onnx>=1.18.0",
     "onnxruntime>=1.22.0",
+    "psutil>=5.9.0",
+    "memory-profiler>=0.61.0",
 ]
 
 [build-system]
